fix: Nablarch 6の挙動に準拠するように修正